[package]
name = "md-viewer"
version = "1.0.3"
edition = "2021"
description = "A beautiful Markdown viewer for Windows"

[dependencies]
wry = "0.46"
tao = "0.30"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
open = "5"
percent-encoding = "2"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
